Update SwaggerConfiguration.java