@@ -35,8 +35,8 @@ public class SwaggerConfiguration {
 				.apis(RequestHandlerSelectors.basePackage("com.flight"))
 				.paths(PathSelectors.any())
 				.build().apiInfo(apiEndPointInfo())
-				.securitySchemes(Collections.singletonList(authenticationScheme))
-                .securityContexts(List.of(securityContext()));
+	//			.securitySchemes(Collections.singletonList(authenticationScheme))
+         //       .securityContexts(List.of(securityContext()));
 		
 	}
 	public ApiInfo apiEndPointInfo() {
